--- a/templates/light_workout.html
+++ b/templates/light_workout.html
@@ -9,10 +9,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="static/Homepage.css">
         <link rel="icon" href="/static/Home-images/logo image.jpg">
-    </head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <body>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
+    </head>
+    <body>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/capture" >Capture Face</a>
@@ -20,18 +20,41 @@
     </div>
     <p style="text-align:left;font-size:20px;cursor:pointer;margin:10px" onclick="openNav()">&#9776; settings</p>
 
-    <section class="suggested_exercises" >
-        <h3>Light workout</h3><br><br>
-<!--        <a class="btn btn-info" id="bicep" >Watch Demo</a><br><br>-->
-        <a class="btn btn-info"  href="/biceps">Watch Demo</a><br><br>
+    <section class="suggested_exercises" id="exercise-section">
+        <h2>Light workout</h2><br><br>
         <div id="iframeHolder" ></div>
+        <div class="box">
+            <div class="container">
+                <img src="https://image.shutterstock.com/image-vector/man-doing-standing-dumbbell-bicep-600w-1850250391.jpg" style="height:150px">
+                <div class="inner-container">
+                    <h4 style="color:black"> BICEPS </h4>
+                    <h5 style="color:black"> X 12  </h5>
+                    <p style="color:black"> 2 min </p>
+                </div>
+                <div class="inner-container-button"><a class="btn btn-info"   id="bicep" style="height:35px">Watch Bicep</a></div>
+            </div>
+            <div class="container">
+                <img src="https://image.shutterstock.com/image-vector/man-doing-air-squat-2-600w-1830755837.jpg" style="height:150px">
+                <div class="inner-container">
+                    <h4 style="color:black"> SQUATS </h4>
+                    <h5 style="color:black"> X 12  </h5>
+                    <p style="color:black"> 2 min </p>
+                </div>
+                <div class="inner-container-button"><a class="btn btn-info"  id="squat" style="height:35px">Watch squat</a></div>
+            </div>
+        </div>
+        <a id="exercise" class="btn btn-info" onclick="instructions()">Try the Exercise</a>
     </section>
-    <a href="/ipcam" class="btn btn-info" onclick="instructions()">Try the Exercise</a>
-    <br><br>
-    {% if counter %}
-        <p class=counter> Biceps count = {{  counter }}</p>
-    {% endif %}
-    <script>
+<br><br>
+    <img id="img">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+    integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <script type="text/javascript">
         function openNav() {
           document.getElementById("mySidenav").style.width = "250px";
         }
@@ -43,18 +66,41 @@
           alert(`INSTRUCTIONS! \n \
              1. Please watch demo video first \n \
              2. Make sure that your cam captures entire body \n \
-             3. Correctly done excercise are only counted, count will be visible at top left corner \n \
+             3. Correctly done exercise are only counted, count will be visible at top left corner \n \
               HAVE A NICE DAY`);
         }
-    </script>
+         $('#bicep').click(function(){
+            $('#iframeHolder').html('<iframe id="iframeHolder" src="static/sample_videos/biceps.mp4" width="500" height="350"></iframe>');
+        });
+        $('#squat').click(function(){
+            $('#iframeHolder').html('<iframe id="iframeHolder" src="static/sample_videos/squat.mp4" width="500" height="350"></iframe>');
+        });
+        </script>
+        <script type="text/javascript">
+         $( document ).ready(function() {
+          var socket = io();
+          socket.on('connect', function(){
+            socket.send("connected")
+          });
+          socket.on('disconnect', function(){
+            socket.send("disconnected")
+          });
+          socket.on('capture_2', function(data){
+            $("#img").attr("src",data.base_64)
+          });
+          socket.on('redirect', function (data) {
+             window.location.href=data.url
+            console.log(data.url)
+            });
+          $("#exercise").click(function(){
+            $("#exercise-section").hide()
+            socket.emit("light_biceps","sending")
+            console.log("sending to server")
+          })
+      })
 
+    </script>
     </body>
 </html>
 
-<!--    <script>-->
-<!--    $(function(){-->
-<!--        $('#bicep').click(function(){-->
-<!--            $('#iframeHolder').html('<iframe id="iframe" src="static/sample_videos/biceps.mp4" width="500" height="350"></iframe>');-->
-<!--        });-->
-<!--    });-->
-<!--    </script>-->
+
