--- a/static/Homepage.css
+++ b/static/Homepage.css
@@ -86,7 +86,9 @@ form input{
     border-radius: 15px;
     padding: 16px;
     margin: 20px;
-    width: 60vw;
+    width: 55vw;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
