--- a/templates/face.html
+++ b/templates/face.html
@@ -20,7 +20,7 @@
         <p style="text-align:left;font-size:20px;cursor:pointer;margin:15px" onclick="openNav()">&#9776; settings</p>
  </section>
   <div id="basic" style="text-align:center;">
-	  <video class="videostream" autoplay="" controls></video>
+	  <video class="videostream" autoplay=""></video>
       <canvas id="snapshot" width=320 height=240></canvas>
       <br>
       <button class="capture-button btn btn-info">Start camera</button>
